--- a/styles.css/flower.css
+++ b/styles.css/flower.css
@@ -135,3 +135,40 @@ body {
   margin-bottom: 130px;
   text-align: center;
 }
+
+/* hot deal container */
+
+.hot-deals-container {
+  display: flex;
+  gap: 186px;
+  height: 620px;
+  margin-bottom: 130px;
+  border-radius: 8px;
+  background: rgba(229, 84, 115, 0.05);
+}
+.deals-title {
+  color: #272727;
+  font-size: 40px;
+  margin-bottom: 24px;
+}
+.deals-description {
+  color: rgba(39, 39, 39, 0.6);
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 32px;
+}
+.hot-deals {
+  text-align: center;
+  font-size: 18px;
+  width: 600px;
+  padding-left: 400px;
+  padding-top: 230px;
+}
+.deals-title-red {
+  color: #e55473;
+}
+.deals-image {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 400px;
+}
